# ArcFramework

./: CMakeLists.txt  README.md
arc/: Algorithm.hpp  BasicBuffer.hpp  Context.hpp  DeclareNotCopyable.hpp  Device.hpp  FlightFrame.hpp  GLM.hpp  GlobalContext.hpp  IndexBuffer.hpp  RenderPipeline.hpp  Renderer.hpp  SDLVulkan.hpp  Shader.hpp  SimpleGeometry.hpp  Texture.hpp  TypeTraits.hpp  UniformBuffer.hpp  VertexBuffer.hpp  error.hpp  math.hpp  sdlgl.hpp  shader.hpp  window.hpp
dev-tests/buildable/: main.cpp
dev-tests/depth-testing/: CMakeLists.txt  main.cpp  texture.frag  texture.vert  texture.vert.spv  texture_uvs.frag  texture_uvs.frag.spv
dev-tests/perspective/: CMakeLists.txt  main.cpp  perspective.vert
dev-tests/textures/: CMakeLists.txt  compile_shaders.sh  main.cpp
dev-tests/vkbuildable/: main.cpp
dev-tests/vktriangle/: compile_shaders.sh  main.cpp
dev-tests/window-open/: main.cpp
src/: Algorithm.cpp  BasicBuffer.cpp  Context.cpp  DebugMessenger.cpp  Device.cpp  GlobalContext.cpp  IndexBuffer.cpp  RenderPipeline.cpp  Renderer.cpp  Shader.cpp  SimpleGeometry.cpp  Texture.cpp  UniformBuffer.cpp  VertexBuffer.cpp  error.cpp  window.cpp
tests/buildable/: CMakeLists.txt
tests/vkbuildable/: main.cpp
tests/vktriangle/: CMakeLists.txt  main.cpp
tests/window-open/: CMakeLists.txt
